pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalWithTautology/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__frontend: "true"
    name: A
    namespace: default
spec:
    containers: null
status: {}
